mysql/mysql-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: mysql-service-centos
  labels:
    db: centos
spec: 
  ports: 
    - 
      port: 3306
      protocol: TCP
      targetPort: 3306
  selector: 
    db: centos
  type: NodePort
