mysql/network-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: firewall-db
  namespace: default
spec:
  podSelector:
    matchLabels:
      db: centos
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          db: centos
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - podSelector:
        matchLabels:
          db: centos
    ports:
    - protocol: TCP
      port: 3306
